--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -19,21 +19,21 @@ section {
 
 
 
-#footer ul.quick-links li{
+.footer ul.quick-links li{
 	padding: 3px 0;
 	-webkit-transition: .5s all ease;
 	-moz-transition: .5s all ease;
 	transition: .5s all ease;
 }
-#footer ul.quick-links li:hover{
+.footer ul.quick-links li:hover{
 	padding: 3px 0;
 	margin-left:5px;
 	font-weight:700;
 }
-#footer ul.quick-links li a i{
+.footer ul.quick-links li a i{
 	margin-right: 5px;
 }
-#footer ul.quick-links li:hover a i {
+.footer ul.quick-links li:hover a i {
     font-weight: 700;
 }
 
