--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,47 +1,29 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
-section {
-    padding: 10px 0;
-}
+$active-color: #0072ff;
+$footer-border-color: #CCC;
+$light-gray: #777;
 
-#footer {
-    background: #007b5e !important;
-}
+.footer {
+  height: 3rem;
+  border-bottom: 1px solid $footer-border-color;
+  box-shadow: 1px 1px 3px $footer-border-color;
 
-#footer a {
-    color: #ffffff;
-    text-decoration: none !important;
-    background-color: transparent;
-    -webkit-text-decoration-skip: objects;
-}
+  .nav-item {
+    color: $light-gray;
+    padding: 0.85rem 2rem;
+    &.active {
+      color: $active-color;
+      font-weight: bold;
+      border-bottom: 2px solid $active-color;
+    }
+  }
 
-
-
-
-
-.footer ul.quick-links li{
-	padding: 3px 0;
-	-webkit-transition: .5s all ease;
-	-moz-transition: .5s all ease;
-	transition: .5s all ease;
-}
-.footer ul.quick-links li:hover{
-	padding: 3px 0;
-	margin-left:5px;
-	font-weight:700;
-}
-.footer ul.quick-links li a i{
-	margin-right: 5px;
-}
-.footer ul.quick-links li:hover a i {
-    font-weight: 700;
-}
-
-@media (max-width:767px){
-	#footer h5 {
-    padding-left: 0;
-    border-left: transparent;
-    padding-bottom: 0px;
-    margin-bottom: 10px;
-}
+  a {
+    color: $light-gray;
+    text-decoration: none;
+    &:hover {
+      color: $active-color;
+    }
+  }
 }
