--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -46,7 +46,7 @@ h6 {
     padding-bottom: 50px;
     text-align: center;
     color: #f8f8f8;
-    background: url(../img/b-w-bridge.jpg) no-repeat center center;
+    //background: url(../img/b-w-bridge.jpg) no-repeat center center;
     background-size: cover;
 }
 
@@ -108,14 +108,14 @@ h6 {
 .banner {
     padding: 100px 0;
     color: #f8f8f8;
-    background: url(../img/beach-pano.jpg) no-repeat center center;
+    //background: url(../img/beach-pano.jpg) no-repeat center center;
     background-size: cover;
 }
 
 .banner2 {
     padding: 100px 0;
     color: #f8f8f8;
-    background: url(../img/my-apartment.jpg) no-repeat center center;
+    //background: url(../img/my-apartment.jpg) no-repeat center center;
     background-size: cover;
 }
 
