--- a/src/styles/demo.css
+++ b/src/styles/demo.css
@@ -1,7 +1,9 @@
 .home-jumbo {
     background: url('../img/home-hero.png') 50% 50%;
 }
-
+.specialsCard img {
+    max-height: 15em;
+}
 #bttnCtxt {
     float: right;
 }
