--- a/src/styles/demo.css
+++ b/src/styles/demo.css
@@ -11,18 +11,19 @@
     margin-bottom: 15px;
 }
 
-/*.product-list .card{*/
-/*    max-height: 35em;*/
+.product-list .card{
+    height: 30em;
     
-/*}*/
+}
 
 .product-list .card img {
     width: 100%;
     height: auto;
    
 }
-.card-prod-list .card-body {
-    height: 15em;
+.product-list .card-product-list .card-body .ul .prod-desc{
+    height: 20em;
 }
+
 
 
