--- a/src/styles/demo.css
+++ b/src/styles/demo.css
@@ -5,6 +5,27 @@
 .home-jumbo {
     background: url('../img/home-hero.png') 50% 50%;
 }
+.wheels {
+    background: url('../img/shpCat-bckGrnds/Wheels_0419-jpg.jpg') 50% 50%;
+}
+.ignition {
+    background: url('../img/shpCat-bckGrnds/ignition-jpg.jpg') 50% 50%;
+}
+.engines {
+    background: url('../img/shpCat-bckGrnds/engine-turbo-rx-7.jpg') 50% 50%;
+}
+.cooling {
+    background: url('../img/shpCat-bckGrnds/cooling-jpg.jpg') 50% 50%;
+}
+.fuel {
+    background: url('../img/shpCat-bckGrnds/fuelpump2.jpg') 50% 50%;
+}
+.safety {
+    background: url('../img/shpCat-bckGrnds/Safety-jpg.jpg') 50% 50%;
+}
+.brakes {
+    background: url('../img/home-hero.png') 50% 50%;
+}
 .specialsCard {
     overflow: hidden;
 }
@@ -22,6 +43,8 @@
 .specialsCard img {
     max-height: 12em;
     width: auto;
+}
+.specialImg {
     margin: 0 auto;
 }
 #bttnCtxt {
