--- a/src/styles/demo.css
+++ b/src/styles/demo.css
@@ -5,29 +5,71 @@
 .home-jumbo {
     background: url('../img/home-hero.png') 50% 50%;
 }
+.home-jumbo h1 {
+    font-size: 5em;
+    font-weight: bold;
+    -webkit-text-stroke: 1px black;
+    color: white;
+    text-shadow:
+        0.05em 0.05em 0 #000,
+        -0.01em -0.01em 0 #000,
+        0.01em -0.01em 0 #000,
+        -0.01em 0.01em 0 #000,
+        0.01em 0.01em 0 #000;
+}
+
+.shopCategory > div > a > div {
+    font-size: 2em;
+    font-weight: bold;
+    -webkit-text-stroke: 1px black;
+    color: white;
+    text-shadow:
+        3px 3px 0 #000,
+        -1px -1px 0 #000,  
+        1px -1px 0 #000,
+        -1px 1px 0 #000,
+        1px 1px 0 #000;
+        
+}
+.shopCategory > div > a:hover {
+    color: #999999;
+    text-decoration: none;
+        
+}
+.shopCategory > div > a > div:hover {
+    color: #999999;
+}
 .wheels {
-    background: url('../img/shpCat-bckGrnds/Wheels_0419-jpg.jpg') 50% 50%;
+    background: url('../img/shpCat-bckGrnds/wheels.png') 50% 50%;
+    background-size: cover;
 }
 .ignition {
-    background: url('../img/shpCat-bckGrnds/ignition-jpg.jpg') 50% 50%;
+    background: url('../img/shpCat-bckGrnds/ignition-jpg.png') 50% 50%;
+    background-size: cover;
 }
 .engines {
-    background: url('../img/shpCat-bckGrnds/engine-turbo-rx-7.jpg') 50% 50%;
+    background: url('../img/shpCat-bckGrnds/engine-turbo-rx-7.png') 50% 50%;
+    background-size: cover;
 }
 .cooling {
-    background: url('../img/shpCat-bckGrnds/cooling-jpg.jpg') 50% 50%;
+    background: url('../img/shpCat-bckGrnds/cooling-jpg.png') 50% 50%;
+    background-size: cover;
 }
 .fuel {
-    background: url('../img/shpCat-bckGrnds/fuelpump2.jpg') 50% 50%;
+    background: url('../img/shpCat-bckGrnds/fuel-pump.png') 50% 50%;
+    background-size: cover;
 }
 .safety {
-    background: url('../img/shpCat-bckGrnds/Safety-jpg.jpg') 50% 50%;
+    background: url('../img/shpCat-bckGrnds/Safety-jpg.png') 50% 50%;
+    background-size: cover;
 }
 .brakes {
-    background: url('../img/home-hero.png') 50% 50%;
+    background: url('../img/shpCat-bckGrnds/brake-gallery04.png') 50% 50%;
+    background-size: cover;
 }
 .specialsCard {
     overflow: hidden;
+    border: #000 2px solid;
 }
 .specialsCard h5.card-title {
     white-space: nowrap; 
