Changing from Car parts to computer parts, login and logout working

--- a/src/styles/demo.css
+++ b/src/styles/demo.css
@@ -3,7 +3,7 @@
     clear:both;
 }
 .home-jumbo {
-    background: url('../img/home-hero.png') 50% 50%;
+    background: url('../img/our-parts-banner.jpg') 50% 50%;
 }
 .home-jumbo h1 {
     font-size: 5em;
