--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -37,8 +37,9 @@ h6 {
 }
 
 .lead {
-    font-size: 18px;
-    font-weight: 400;
+    color: white;
+    font-size: 2.25rem;
+    font-weight: 600;
 }
 
 .intro-header {
