--- a/src/styles/profile-page.css
+++ b/src/styles/profile-page.css
@@ -1,7 +1,23 @@
+#app {
+    margin-bottom: 3em;
+}
 .glyphicon {  margin-bottom: 10px;margin-right: 10px;}
 
 small {
-display: block;
-line-height: 1.428571429;
-color: #999;
+    display: block;
+    line-height: 1.428571429;
+    color: #999;
+}
+
+.lead {
+    color: white;
+    font-size: 2.25rem;
+    font-weight: 600;
+}
+
+/* product-list.jsx */
+.prod-desc {
+    height: 13em;
+    overflow-y: hidden;
+    text-overflow: ellipsis;
 }
